# chess-ai

./: .gitignore  Cargo.toml  README.md  assets.tar  index.html
.cargo/: config.toml
js/: js_bundle.js
src/: board.rs  main.rs  piece.rs
src/agent/: minimax.rs  mod.rs  monte_carlo.rs  neural_network.rs  random.rs
src/core/: board.rs  game.rs  mod.rs  move_generator.rs  move_validator.rs  piece.rs  position.rs  snapshot.rs
src/core/move_validator/: hardcoded.rs  mod.rs  optimized.rs  readable.rs
src/ui/: carry_piece.rs  logic.rs  mod.rs
