[package]
name = "chess-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = "0.13.1"
good-web-game = "0.6.1"
miniquad = "=0.3.13"
rand = "0.9.1"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
num_cpus = "1.17.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = "full"

[features]
train = []
