[package]
name = "chess_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
good-web-game = "0.6.1"
miniquad = "=0.3.13"
itertools = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = "full"

[features]
train = []
